<resources>
    <string name="app_name">TPG Alarmas Reefer</string>
    <string name="app_title_activity_login">Login TPG News</string>
    <string name="hint_username">Ingrese Su Usuario</string>
    <string name="hint_password">Ingrese Su Contraseña</string>
    <string name="text_button">Login</string>
    <string name="dont_have_account">¿No tienes una Cuenta?, </string>
    <string name="crear_cuenta">Crea una Aquí</string>

    <string name="correo">Correo</string>
    <string name="nombre">Nombres</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirmar Password</string>
    <string name="text_button_registrar">Registrar</string>
    <string name="tootlbar_title_create_account">Crear Cuenta</string>
    <string name="user_name_card">Ricky Ramos</string>
    <string name="second_word_detail">Me Gusta</string>
    <string name="title_image">Todo copas en la playa</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>

    <string name="lorem">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas \"Letraset\", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transition_name_picture">transition_name_picture</string>


    <string-array name="lista_depositos">
        <item>ARETINA S.A.</item>
        <item>CHIQUITA BANANA ECUADOR</item>
        <item>CONTECON GUAYAQUIL S.A.</item>
        <item>DEPCONSA</item>
        <item>FARBEM NORTE</item>
        <item>OPACIF  (OPERADORA DEL PACIFICO S.A.)</item>
        <item>REPCONTVER</item>
        <item>TASESA</item>
        <item>TERCON</item>
        <item>TPG</item>
    </string-array>
    <string name="title_activity_menu_principal">menu_principal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>
