<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.PictureDetailActvity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height_layout"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:color="@color/colorWhite"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <ImageView
                android:id="@+id/image_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/foto_tpg"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/layout_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/edit_margin_create">

            <TextView
                android:id="@+id/user_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_horizontal"
                android:paddingRight="@dimen/activity_vertical_padding"
                android:text="@string/user_name_card"
                android:textSize="@dimen/user_name_detail"

                />

            <LinearLayout
                android:id="@+id/layout_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_padding"
                android:paddingLeft="@dimen/padding_horizontal"
                android:paddingRight="@dimen/padding_horizontal">

                <TextView
                    android:id="@+id/like_nomber_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="@dimen/like_text_size"

                    />

                <TextView
                    android:id="@+id/second_word_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_second_word"
                    android:text="@string/second_word_detail"
                    android:textSize="@dimen/like_text_size" />
            </LinearLayout>


            <TextView
                android:id="@+id/line"
                style="?android:attr/listSeparatorTextViewStyle"
                android:paddingTop="5dip"
                android:gravity="center_horizontal"
                android:layout_below="@+id/connect_help"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000" />

            <TextView
                android:id="@+id/title_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/top_text_view_title_image"
                android:text="@string/title_image"
                android:textSize="@dimen/like_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_content_image_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="@dimen/padding_horizontal_detsail_left"
                android:paddingRight="@dimen/padding_horizontal_detsail_left"
                android:paddingTop="@dimen/top_text_view_title_image"
                android:text="@string/lorem"
                android:textSize="@dimen/like_text_size" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floating_abutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/agregar_plus"
        app:layout_anchor="@+id/appbar"
        app:layout_anchorGravity="bottom|end"
        />

</android.support.design.widget.CoordinatorLayout>
