<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp"
    tools:context="ec.com.tpg.tpgnews.MainActivity"
    android:background="@drawable/fondo_tpg_login_gruas_nave"
    android:scaleType="centerCrop"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        >

    <ImageView
        android:id="@+id/tpglogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/tpg_logo"
        />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_weight="0.4"
        android:fillViewport="true"
        >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_horizontal"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_horizontal"
            android:layout_marginBottom="150dp"
            android:elevation="10dp"
            android:background="@xml/borde_layout"
            >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            android:textColor="@color/colorWhite"
            >
            <android.support.design.widget.TextInputEditText
                android:id="@+id/txt_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/EditTextWhite"
            android:textColor="@color/colorWhite"
            >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/button_aceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button"
            android:theme="@style/RaisedButtonDark"
            android:onClick="login"
            android:layout_marginTop="30dp"

            />
            </LinearLayout>


            <!--<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                >
                <TextView
                android:id="@+id/label_no_have_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account  ricky"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                />
                <TextView
                    android:id="@+id/label_crear_cuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/crear_cuenta"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:paddingLeft="4dp"
                    android:layout_toRightOf="@+id/label_no_have_count"
                    android:onClick="irCreateAccount"
                    />

            </RelativeLayout>-->

    </LinearLayout>
    </ScrollView>

</LinearLayout>




</android.support.design.widget.CoordinatorLayout>





